--- a/BackEnd/Api/ApiSalleConcert/ApiSalleConcert.csproj
+++ b/BackEnd/Api/ApiSalleConcert/ApiSalleConcert.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.13" />
 		<PackageReference Include="MongoDB.Bson" Version="2.23.1" />
 		<PackageReference Include="MongoDB.Driver" Version="2.23.1" />
