Ajustement du CSS pour la page GetAllSalles OK (pas responsive)

--- a/BackEnd/Api/ApiSalleConcert/appsettings.json
+++ b/BackEnd/Api/ApiSalleConcert/appsettings.json
@@ -1,7 +1,7 @@
 {
 	"SallesStoreDatabase": {
-		"ConnectionString": "mongodb://localhost:27017",
-		"DatabaseName": "salles",
+		"ConnectionString": "mongodb+srv://arnaud:test59114@cluster0.ek3m7.mongodb.net/", //J'ai du modifier les données de connexion pour pouvoir me connecter chez moi (Arnaud)
+		"DatabaseName": "Salles",
 		"SallesCollectionName": "salles"
 	},
 	"Logging": {
