Fin de l'implémantation de la page principal (GetAll OK / FindBy OK)

--- a/BackEnd/Api/ApiSalleConcert/appsettings.json
+++ b/BackEnd/Api/ApiSalleConcert/appsettings.json
@@ -1,7 +1,8 @@
 {
 	"SallesStoreDatabase": {
-		"ConnectionString": "mongodb+srv://arnaud:test59114@cluster0.ek3m7.mongodb.net/", //J'ai du modifier les données de connexion pour pouvoir me connecter chez moi (Arnaud)
-		"DatabaseName": "Salles",
+		//"ConnectionString": "mongodb+srv://arnaud:test59114@cluster0.ek3m7.mongodb.net/", //J'ai du modifier les données de connexion pour pouvoir me connecter chez moi (Arnaud)
+		"ConnectionString": "mongodb://localhost:27017", //J'ai du modifier les données de connexion pour pouvoir me connecter chez moi (Arnaud)
+		"DatabaseName": "salles",
 		"SallesCollectionName": "salles"
 	},
 	"Logging": {
