--- a/BackEnd/Api/ApiSalleConcert/appsettings.json
+++ b/BackEnd/Api/ApiSalleConcert/appsettings.json
@@ -6,6 +6,7 @@
 		"SallesCollectionName": "salles", // Collection salles
 		"UsersCollectionName": "users" // Collection users
 	},
+	"JwtKey": "test",
 	"Logging": {
 		"LogLevel": {
 			"Default": "Information",
