Ajout des Models / Services / Controller (pas OK)

--- a/BackEnd/Api/ApiSalleConcert/appsettings.json
+++ b/BackEnd/Api/ApiSalleConcert/appsettings.json
@@ -4,7 +4,8 @@
 		"ConnectionString": "mongodb://localhost:27017", //J'ai du modifier les données de connexion pour pouvoir me connecter chez moi (Arnaud)
 		"DatabaseName": "salles",
 		"SallesCollectionName": "salles", // Collection salles
-		"UsersCollectionName": "users" // Collection users
+		"UsersCollectionName": "users", // Collection users
+		"EventsCollectionName": "events"
 	},
 	"JwtKey": "test",
 	"Logging": {
