Generation du token OK

--- a/BackEnd/Api/ApiSalleConcert/appsettings.json
+++ b/BackEnd/Api/ApiSalleConcert/appsettings.json
@@ -7,7 +7,7 @@
 		"UsersCollectionName": "users", // Collection users
 		"EventsCollectionName": "events"
 	},
-	"JwtKey": "test",
+	"JwtKey": "eO5wRvXmynTMVdxXjZVmOAmX2wgoxMmieDvEIomx",
 	"Logging": {
 		"LogLevel": {
 			"Default": "Information",
