--- a/BackEnd/Api/ApiSalleConcert/appsettings.json
+++ b/BackEnd/Api/ApiSalleConcert/appsettings.json
@@ -5,7 +5,8 @@
 		"DatabaseName": "salles",
 		"SallesCollectionName": "salles", // Collection salles
 		"UsersCollectionName": "users", // Collection users
-		"EventsCollectionName": "events"
+		"EventsCollectionName": "events",
+		"StylesCollectionName": "styles"
 	},
 	"JwtKey": "eO5wRvXmynTMVdxXjZVmOAmX2wgoxMmieDvEIomx",
 	"Logging": {
