--- a/react-app-arnaud/package.json
+++ b/react-app-arnaud/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
