--- a/BackEnd/Api/ApiSalleConcert/appsettings.json
+++ b/BackEnd/Api/ApiSalleConcert/appsettings.json
@@ -3,7 +3,7 @@
 		//"ConnectionString": "mongodb+srv://arnaud:test59114@cluster0.ek3m7.mongodb.net/", //J'ai du modifier les données de connexion pour pouvoir me connecter chez moi (Arnaud)
 		"ConnectionString": "mongodb://localhost:27017", //J'ai du modifier les données de connexion pour pouvoir me connecter chez moi (Arnaud)
 
-		"DatabaseName": "salles",
+		"DatabaseName": "salle",
 		"SallesCollectionName": "salles", // Collection salles
 		"UsersCollectionName": "users", // Collection users
 		"EventsCollectionName": "events",
