--- a/react-app-arnaud/package.json
+++ b/react-app-arnaud/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
+    "font-awesome": "^4.7.0",
     "node": "^21.6.1",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
